put the overflow only in the fixed template

--- a/wdn/templates_3.0/css/content/basestyles.css
+++ b/wdn/templates_3.0/css/content/basestyles.css
@@ -11,7 +11,6 @@
 	color: #494949;
 	float: left;
 	padding: 0 10px;
-	overflow:hidden;
 	}
 	
 #maincontent a {
