--- a/wdn/templates_3.0/css/variations/fixed.css
+++ b/wdn/templates_3.0/css/variations/fixed.css
@@ -11,6 +11,10 @@ body.fixed #wdn_navigation_wrapper {
 	width: 946px;
 }
 
+body.fixed #maincontent {
+	overflow:hidden;
+}
+
 body.fixed #footer {
 	width:960px;
 }
